--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,4 @@
 {
   "**/*.{js,jsx,ts,tsx}": "npx eslint --fix",
-  "**/*.{js,jsx,ts,tsx,json}": "npx prettier --write",
-  "**/*.{spec,test}.{js,jsx,ts,tsx}": "npx jest"
+  "**/*.{js,jsx,ts,tsx,json}": "npx prettier --write"
 }
